# horizon_core

./: CMakeLists.txt
docs/doxygen/: Core.dox
include/core/: EngineInitialisation.hpp  Horizon.hpp
include/core/application/: BaseLoopApplication.hpp  GameApplication.hpp  IApplication.hpp
include/core/loop/: BackgroundFixTickLoop.hpp  BackgroundLoop.hpp  FixTickLoop.hpp  Loop.hpp
include/horizon/core/: EngineInitialisation.hpp  Horizon.hpp
include/horizon/core/application/: BaseLoopApplication.hpp  GameApplication.hpp  IApplication.hpp
source/: EngineInitialisation.cpp  EngineRun.cpp  main.cpp
source/application/: GameApplication.cpp
source/loop/: BackgroundLoop.cpp  Loop.cpp
